# SFML

./: CMakeLists.txt  README.md  main.cpp
include/: Circle.h  Ellipse.h  Rectangle.h  Shape.h  Triangle.h
src/: Circle.cpp  Ellipse.cpp  Rectangle.cpp  Shape.cpp  Triangle.cpp
